--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
+        "unplugin-vue-components": "^0.25.2",
         "vite": "^4.0.0",
         "vue": "^3.2.41",
         "vue-tsc": "^1.2.0"
+    },
+    "dependencies": {
+        "ant-design-vue": "^4.0.7"
     }
 }
